--- a/ex6_SysID/Learning_Based_MPC.ipynb
+++ b/ex6_SysID/Learning_Based_MPC.ipynb
@@ -75,7 +75,7 @@
     "sys.path.append(os.path.abspath(\"..\"))\n",
     "from rest.utils import *\n",
     "\n",
-    "from SysID_utils import GenerateData, Identifier_LR, Identifier_BLR"
+    "from ex6_SysID.SysID_utils import GenerateData, Identifier_LR, Identifier_BLR"
    ]
   },
   {
