--- a/ex6_SysID/SysID.ipynb
+++ b/ex6_SysID/SysID.ipynb
@@ -61,8 +61,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
     "import numpy as np\n",
-    "from SysID_utils import GenerateData, Identifier_LR, Identifier_BLR, plot_param_over_sample_size, plot_rmse_over_sample_size, animate_training_progress"
+    "\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from ex6_SysID.SysID_utils import GenerateData, Identifier_LR, Identifier_BLR, plot_param_over_sample_size, plot_rmse_over_sample_size, animate_training_progress"
    ]
   },
   {
