--- a/ex7_RL/ssp.ipynb
+++ b/ex7_RL/ssp.ipynb
@@ -45,10 +45,14 @@
     "# =========================================\n",
     "# STEP 0: Import Required Libraries and Utilities\n",
     "# =========================================\n",
-    "import numpy as np\n",
+    "import sys\n",
+    "import os\n",
     "import time\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ssp_utils import (\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from ex7_RL.ssp_utils import (\n",
     "    generate_problem_data,\n",
     "    plot_transition_matrix,\n",
     "    SSPPolicyIteration,\n",
