--- a/ex8_DRL/drl.ipynb
+++ b/ex8_DRL/drl.ipynb
@@ -23,9 +23,8 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
-    "from ppo_utils import PPOController\n",
-    "\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from ex8_DRL.ppo_utils import PPOController\n",
     "from rest.utils import *"
    ]
   },
@@ -343,7 +342,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "### **Wrap-up: PPO and What’s Next**\n",
+    "### **Wrap-up: PPO and What’s the next**\n",
     "\n",
     "In this chapter, we introduced the **core ideas behind Proximal Policy Optimization (PPO)** — one of the most widely used deep reinforcement learning algorithms today. While time constraints prevented us from delving into the full theoretical background or complete implementation, we focused on **how PPO works**, and showcased its **impressive performance**, especially in scenarios involving **continuous state and action spaces**.\n",
     "\n",
