--- a/ex4_iLQR/iterative_linear_quadratic_regulator.ipynb
+++ b/ex4_iLQR/iterative_linear_quadratic_regulator.ipynb
@@ -561,8 +561,6 @@
    "source": [
     "---\n",
     "<br>\n"
-    "---\n",
-    "<br>\n"
    ]
   },
   {
@@ -579,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad86082b",
+   "id": "7c96c949",
    "metadata": {},
    "source": [
     "\n",
@@ -1015,8 +1013,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
