fix minor bugs, rearrange the structure of repo

--- a/ex1_DP/1.1_dynamic_programming.ipynb
+++ b/ex1_DP/1.1_dynamic_programming.ipynb
@@ -126,11 +126,14 @@
     "# Import all related classes from the predefined repo\n",
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from rest.utils import *\n",
-    "\n",
     "import numpy as np\n",
-    "import casadi as ca"
+    "import casadi as ca\n",
+    "from __future__ import annotations\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from utils.env import *\n",
+    "from utils.simulator import *\n",
+    "from ex1_DP.dp_utils import *"
    ]
   },
   {
@@ -307,9 +310,15 @@
     "#                  - `state_ubs`: upper limit of state, type: np.array or None (if no related limit)\n",
     "#                  - `input_lbs`: lower limit of input, type: np.array or None (if no related limit)\n",
     "#                  - `input_ubs`: upper limit of input, type: float or None (if no related limit)\n",
-    "\n",
-    "env = Env(case, np.array([initial_position, initial_velocity]), np.array([target_position, target_velocity]), h, symbolic_theta, \n",
-    "          state_lbs=state_lbs, state_ubs=state_ubs, input_lbs=input_lbs, input_ubs=input_ubs)\n",
+    "env = Env(case=case, \n",
+    "          init_state=np.array([initial_position, initial_velocity]), \n",
+    "          target_state=np.array([target_position, target_velocity]), \n",
+    "          symbolic_h_mean_ext_case=h, \n",
+    "          symbolic_theta_ext=symbolic_theta, \n",
+    "          state_lbs=state_lbs, \n",
+    "          state_ubs=state_ubs, \n",
+    "          input_lbs=input_lbs, \n",
+    "          input_ubs=input_ubs)\n",
     "\n",
     "# Results visualisation\n",
     "env.test_env() #  shape of slope (left side) and theta curve (right side) "
@@ -485,7 +494,7 @@
     "    self,\n",
     "    current_state: np.ndarray, \n",
     "    current_input: np.ndarray, \n",
-    ") -> Tuple[np.ndarray, np.ndarray]:\n",
+    ") -> tuple[np.ndarray, np.ndarray]:\n",
     "    \"\"\"\n",
     "    Compute symbolic Jacobians A(x,u) & B(x,u) and state / input matrix A & B of the system dynamics.\n",
     "    \"\"\"\n",
@@ -618,8 +627,10 @@
     "#              2) `state_names`: names of state variables, type: list[str]\n",
     "#              3) `input_names`: names of input variables, type: list[str]\n",
     "#              4) `setup_dynamics`: setup function for system dynamics defined in the last step, type: function\n",
-    "\n",
-    "dynamics = Dynamics(env, state_names, input_names, setup_dynamics)"
+    "dynamics = Dynamics(env=env, \n",
+    "                    state_names=state_names, \n",
+    "                    input_names=input_names, \n",
+    "                    setup_dynamics=setup_dynamics)"
    ]
   },
   {
@@ -1142,7 +1153,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   }
  },
