--- a/ex2_LQR/2.1_linear_quadratic_regulator.ipynb
+++ b/ex2_LQR/2.1_linear_quadratic_regulator.ipynb
@@ -70,11 +70,12 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from rest.utils import *\n",
-    "\n",
     "import numpy as np\n",
-    "import casadi as ca"
+    "\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from utils.env import *\n",
+    "from utils.simulator import *\n",
+    "from ex2_LQR.lqr_utils import *\n"
    ]
   },
   {
@@ -1046,7 +1047,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   }
  },
