--- a/ex4_iLQR/4.1_iterative_linear_quadratic_regulator.ipynb
+++ b/ex4_iLQR/4.1_iterative_linear_quadratic_regulator.ipynb
@@ -55,10 +55,13 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from rest.utils import *\n",
+    "import numpy as np\n",
     "\n",
-    "import numpy as np"
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from utils.env import *\n",
+    "from utils.simulator import *\n",
+    "from ex2_LQR.lqr_utils import *\n",
+    "from ex4_iLQR.ilqr_utils import *"
    ]
   },
   {
@@ -839,6 +842,9 @@
     "# Define a upper bound of input a\n",
     "input_ubs = 8.0\n",
     "input_lbs = -5.0\n",
+    "\n",
+    "# Simulation time length\n",
+    "t_terminal = 10.0\n",
     "\n",
     "# Instantiate class 'Env' and visualize the shape of the slope (left side) and theta curve (right side) \n",
     "env_nonlinear_clipped = Env(case_nonlinear, np.array([initial_position, initial_velocity]), np.array([target_position, target_velocity]), \n",
