--- a/ex5_MPC/5.1_model_predictive_control_part1.ipynb
+++ b/ex5_MPC/5.1_model_predictive_control_part1.ipynb
@@ -84,11 +84,16 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from rest.utils import *\n",
-    "\n",
     "import numpy as np\n",
-    "import casadi as ca"
+    "import casadi as ca\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from utils.env import *\n",
+    "from utils.controller import *\n",
+    "from utils.simulator import *\n",
+    "from ex2_LQR.lqr_utils import *\n",
+    "from ex4_iLQR.ilqr_utils import *\n",
+    "from ex5_MPC.mpc_utils import *"
    ]
   },
   {
