--- a/ex5_MPC/5.2_model_predictive_control_part2.ipynb
+++ b/ex5_MPC/5.2_model_predictive_control_part2.ipynb
@@ -57,26 +57,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "27bb25ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from rest.utils import *\n",
-    "\n",
     "import numpy as np\n",
     "import casadi as ca\n",
-    "\n",
     "import pytope as pt\n",
-    "from scipy.spatial import ConvexHull, QhullError"
+    "from scipy.spatial import ConvexHull, QhullError\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from utils.env import *\n",
+    "from utils.controller import *\n",
+    "from utils.simulator import *\n",
+    "from ex2_LQR.lqr_utils import *\n",
+    "from ex5_MPC.mpc_utils import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4bd340eb",
    "metadata": {},
    "outputs": [],
@@ -185,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "594773b5",
    "metadata": {},
    "outputs": [],
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c99bdb62",
    "metadata": {},
    "outputs": [],
@@ -287,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "47846a9c",
    "metadata": {},
    "outputs": [],
@@ -742,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "31dcb173",
    "metadata": {},
    "outputs": [],
@@ -1080,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "371219d4",
    "metadata": {},
    "outputs": [],
@@ -1090,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c753be45",
    "metadata": {},
    "outputs": [],
@@ -1215,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "20c1c3ee",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ca7f1781",
    "metadata": {},
    "outputs": [],
