--- a/ex7_RL/7.2_mfrl.ipynb
+++ b/ex7_RL/7.2_mfrl.ipynb
@@ -88,8 +88,12 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from rest.utils import *"
+    "from utils.env import *\n",
+    "from utils.simulator import *\n",
+    "from ex5_MPC.mpc_utils import *\n",
+    "from ex7_RL.rl_utils import *"
    ]
   },
   {
@@ -842,7 +846,7 @@
     "\n",
     "# Instantiate the visualizer, and display the plottings and animation\n",
     "visualizer_mcrl = Visualizer(simulator_mcrl)\n",
-    "visualizer_mcrl.display_contrast_plots(\"Simulation of Monte Carlo Method on Flat Terrain\", simulator_mpc, if_gray=True)\n",
+    "visualizer_mcrl.display_contrast_plots(simulator_mpc, title=\"Simulation of Monte Carlo Method on Flat Terrain\", if_gray=True)\n",
     "visualizer_mcrl.display_contrast_animation_same(simulator_mpc, if_gray=True)"
    ]
   },
@@ -939,7 +943,7 @@
     "\n",
     "# Instantiate the visualizer, and display the plottings and animation\n",
     "visualizer_mcrl = Visualizer(simulator_mcrl)\n",
-    "visualizer_mcrl.display_contrast_plots(\"Simulation of Monte Carlo Method on Hilly Terrain\", simulator_mpc, if_gray=True)\n",
+    "visualizer_mcrl.display_contrast_plots(simulator_mpc, title=\"Simulation of Monte Carlo Method on Hilly Terrain\", if_gray=True)\n",
     "visualizer_mcrl.display_contrast_animation_same(simulator_mpc, if_gray=True)"
    ]
   },
@@ -1066,7 +1070,7 @@
     "\n",
     "# Instantiate the visualizer, and display the plottings and animation\n",
     "visualizer_mcrl = Visualizer(simulator_mcrl_1)\n",
-    "visualizer_mcrl.display_contrast_plots(\"Exploration vs. Exploitation\", simulator_mcrl_2, simulator_mcrl_3)\n",
+    "visualizer_mcrl.display_contrast_plots(simulator_mcrl_2, simulator_mcrl_3, title=\"Exploration vs. Exploitation\")\n",
     "visualizer_mcrl.display_contrast_animation_same(simulator_mcrl_2, simulator_mcrl_3)"
    ]
   },
@@ -1135,7 +1139,7 @@
     "\n",
     "# Compare the best result from Monte Carlo method with NMPC\n",
     "visualizer_mcrl = Visualizer(simulator_mcrl_1)\n",
-    "visualizer_mcrl.display_contrast_plots(\"The best Epsilon-decaying Group from Monte Carlo Method vs. NMPC\", simulator_mpc, if_gray=True)\n",
+    "visualizer_mcrl.display_contrast_plots(simulator_mpc, title=\"The best Epsilon-decaying Group from Monte Carlo Method vs. NMPC\", if_gray=True)\n",
     "visualizer_mcrl.display_contrast_animation_same(simulator_mpc, if_gray=True)"
    ]
   },
@@ -1371,7 +1375,7 @@
     "\n",
     "# Instantiate the visualizer, and display the plottings and animation\n",
     "visualizer_ql = Visualizer(simulator_ql)\n",
-    "visualizer_ql.display_contrast_plots(\"Simulation of Q-learning Controller on Flat Terrain\", simulator_mpc, if_gray=True)\n",
+    "visualizer_ql.display_contrast_plots(simulator_mpc, title=\"Simulation of Q-learning Controller on Flat Terrain\", if_gray=True)\n",
     "visualizer_ql.display_contrast_animation_same(simulator_mpc, if_gray=True)"
    ]
   },
@@ -1441,7 +1445,7 @@
     "\n",
     "# Instantiate the visualizer, and display the plottings and animation\n",
     "visualizer_ql = Visualizer(simulator_ql)\n",
-    "visualizer_ql.display_contrast_plots(\"Simulation of Q-learning Controller on Hilly Terrain\", simulator_mpc, if_gray=True)\n",
+    "visualizer_ql.display_contrast_plots(simulator_mpc, title=\"Simulation of Q-learning Controller on Hilly Terrain\", if_gray=True)\n",
     "visualizer_ql.display_contrast_animation_same(simulator_mpc, if_gray=True)\n"
    ]
   },
@@ -1579,7 +1583,7 @@
     "\n",
     "# Instantiate the visualizer, and display the plottings and animation\n",
     "visualizer_mcrl = Visualizer(simulator_mcrl)\n",
-    "visualizer_mcrl.display_contrast_plots(\"Monte Carlo Method vs. Q-learning\", simulator_ql)\n",
+    "visualizer_mcrl.display_contrast_plots(simulator_ql, title = \"Monte Carlo Method vs. Q-learning\")\n",
     "visualizer_mcrl.display_contrast_animation_same(simulator_ql)"
    ]
   },
