--- a/ex7_RL/7.1_mbrl.ipynb
+++ b/ex7_RL/7.1_mbrl.ipynb
@@ -80,14 +80,16 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "from functools import wraps\n",
-    "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from rest.utils import *\n",
-    "\n",
-    "# import time\n",
     "import matplotlib\n",
     "import numpy as np\n",
     "import casadi as ca\n",
+    "from functools import wraps\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from utils.env import *\n",
+    "from utils.controller import *\n",
+    "from utils.simulator import *\n",
+    "from ex5_MPC.mpc_utils import *\n",
     "\n",
     "\n",
     "def shiftedColorMap(cmap, start=0, midpoint=0.5, stop=1.0, name='shiftedcmap'):\n",
@@ -1233,8 +1235,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
