--- a/ex8_DRL/8.1_drl.ipynb
+++ b/ex8_DRL/8.1_drl.ipynb
@@ -24,8 +24,10 @@
     "import numpy as np\n",
     "\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from ex8_DRL.ppo_utils import PPOController\n",
-    "from rest.utils import *"
+    "from utils.env import *\n",
+    "from utils.simulator import *\n",
+    "from ex5_MPC.mpc_utils import *\n",
+    "from ex8_DRL.ppo_utils import *"
    ]
   },
   {
@@ -359,8 +361,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
