fix typo in formulas

--- a/ex1_DP/1.1_dynamic_programming.ipynb
+++ b/ex1_DP/1.1_dynamic_programming.ipynb
@@ -230,9 +230,9 @@
     "\n",
     "- Transformation function from $h$ to $\\theta$:\n",
     "\n",
-    "   \\begin{align*}\n",
+    "  $$\n",
     "     \\theta = \\arctan\\left(\\frac{dh}{dp}\\right)\n",
-    "   \\end{align*}\n",
+    "  $$\n",
     "\n",
     "- Hint: \n",
     "\n",
@@ -365,9 +365,9 @@
     "   - state vector $\\boldsymbol{x} = [p, v]^T$\n",
     "   - input vector $u$\n",
     "   - system dynamics:\n",
-    "   \\begin{align*}\n",
+    "   $$\n",
     "     \\begin{bmatrix} \\dot{p} \\\\ \\dot{v} \\end{bmatrix} = \\begin{bmatrix} v \\\\ - g \\sin(\\theta) \\cos(\\theta) \\end{bmatrix} + \\begin{bmatrix} 0 \\\\ \\cos(\\theta)  \\end{bmatrix} u\n",
-    "   \\end{align*}\n",
+    "   $$\n",
     "\n",
     "*Note that: Dynamics equations derived from first principles, such as Newton's laws, are inherently continuous in time and generally nonlinear. To enhance computational efficiency, it is common practice to linearize and discretize these equations as shown in steps 2 and 3.*\n"
    ]
@@ -1076,7 +1076,11 @@
     "target_state_2 = np.array([0.5, 0.0])\n",
     "\n",
     "# Instantiate class 'Env'\n",
-    "env_2 = Env(case_2, initial_state_2, target_state_2, h, symbolic_theta)\n",
+    "env_2 = Env(case=case_2, \n",
+    "            init_state=initial_state_2, \n",
+    "            target_state=target_state_2, \n",
+    "            symbolic_h_mean_ext_case=h, \n",
+    "            symbolic_theta_ext=symbolic_theta)\n",
     "\n",
     "# Instantiate class 'Dynamics'\n",
     "dynamics_2 = Dynamics(env_2, state_names, input_names, setup_dynamics)\n",
