--- a/ex5_MPC/5.2_model_predictive_control_part2.ipynb
+++ b/ex5_MPC/5.2_model_predictive_control_part2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### **Chapter 5.2: MPC for tracking task and Robuct MPC**\n",
+    "### **Chapter 5.2: MPC for Tracking Task and Robuct MPC**\n",
     "\n",
     "\n",
     "\n",
@@ -594,7 +594,7 @@
     "\n",
     "**When tuning a tracking MPC controller for a feasible reference trajectory, the impact of hyperparameter choices tends to be significantly smaller than in stabilization tasks.** This is because the reference trajectory plays a dominant role in guiding the state evolution during optimization, thereby diminishing the influence of cost weights, horizon length, and terminal cost design.\n",
     "\n",
-    "**Although this method demands (Tracking MPC) some offline computation for computing the reference trajectory, its major advantage lies in the fact that tuning is considerably simpler and less sensitive to task-specific configurations, making it the recommended choice in many applications.**"
+    "**Although this method (Tracking MPC) demands some offline computation for the reference trajectory, its major advantage lies in the fact that tuning is considerably simpler and less sensitive to task-specific configurations, making it the recommended choice in many applications.**"
    ]
   },
   {
